# gif89a

./: Buffer.cpp  Buffer.h  CMakeLists.txt  Decoder.cpp  Decoder.h  Exception.cpp  Exception.h  Logging.cpp  Logging.h  StreamReader.cpp  StreamReader.h  Types.h  main.cpp
tests/: CMakeLists.txt  test.cpp
